feat(system): health check
